create comp0onent card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
-<nav>
-  <app-navbar></app-navbar>
-
-</nav>
- 
-<main>
-  <router-outlet></router-outlet>
+<div>
+  <nav>
+    <app-navbar></app-navbar>
   
-</main>
-<footer>
-  <app-footer></app-footer>
-</footer>
+  </nav>
+   
+  <main>
+    <router-outlet></router-outlet>
+    
+  </main>
+  <footer>
+    <app-footer></app-footer>
+  </footer>
+</div>
