--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -13,6 +13,7 @@
             </label>
             <ul class="content_nav">
                 <li><a routerLink="dashboard">HOME</a></li>
+                <li><a href="#">NOSOTROS</a></li>
                 <li class="develop"><a href="">CURSOS</a>
                     <ul class="submenu">
                         <li><a href="#">ACTUALIZACION</a></li>
