--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -1,6 +1,6 @@
 .pie-pagina{
-    
-    width: 100%;
+    padding: auto;
+    height: auto;
     width: 100%;
     background: rgb(1,42,74);
     background: linear-gradient(83deg, rgba(1,42,74,1) 0%, rgba(1,73,124,1) 50%, rgba(42,111,151,1) 100%);
@@ -23,8 +23,8 @@
     align-items: center;
 }
 .pie-pagina .grupo-1 .box figure img{
-    width: 250px;
-    height: 150px;
+    width: 16rem;
+    height: 10rem;
 }
 .pie-pagina .grupo-1 .box h2{
     color: #fff;
@@ -39,6 +39,7 @@
     
     align-items: center;
 }
+
 .pie-pagina .grupo-1 .red-social a{
     display: inline-block;
     text-decoration: none;
@@ -54,10 +55,7 @@
     
     align-items: center;
 }
-fa-icon{
-    width: 200%;
-    height: 200%;
-}
+
 .pie-pagina .grupo-1 .red-social a:hover{
     color: rgb(0, 0, 0);
     background: rgb(255, 255, 255);
@@ -77,5 +75,25 @@ fa-icon{
         grid-template-columns: repeat(1, 1fr);
         grid-gap:30px;
         padding: 35px 0px;
+    }
+    fa-icon{
+        font-size: 1em;
+    }
+    .pie-pagina .grupo-1 .red-social a{
+        
+        display: inline-block;
+        text-decoration: none;
+        width: 25px;
+        height: 25px;
+        line-height: 25px;
+        color: #0a0909;
+        margin-right: 10px;
+        background: rgb(255, 255, 255);
+        text-align: center;
+        transition: all 300ms ease;
+        border-radius: 10px;
+        
+        align-items: center;
+        
     }
 }
