--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,1 +1,26 @@
-<p>sidebar works!</p>
+<div class="barra-lateral">
+    <div class="sidenav-header">
+        <img 
+        [width]="profilePicSize()"
+         [height]="profilePicSize()" 
+         src="/assets/perfil.jpg" [routerLink]="'perfil'">
+        <div class="header-text" [class.hide-header-text]="sideNavCollased()">
+            <h2>Your Perfil</h2>
+            <p>joe doe</p>
+    
+        </div>
+    </div>
+    <mat-nav-list>
+        <a mat-list-item
+        class="menu-item"
+        *ngFor="let item of menuItems()"
+        [routerLink]="item.route"
+        routerLinkActive="select-menu-item"
+        #rla="routerLinkActive"
+        [activated]="rla.isActive"
+        >
+            <mat-icon  matListItemIcon>{{item.icon}} </mat-icon>
+            <span matListItemTitle *ngIf="!sideNavCollased()">{{item.label}}</span>
+        </a>
+    </mat-nav-list>
+</div>
