--- a/src/styles.css
+++ b/src/styles.css
@@ -6,4 +6,5 @@ html, body {
 
   
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
+overflow-y: auto; }
