--- a/src/app/pages/admin/admin-docente-components/admin-list-docente/admin-list-docente.component.css
+++ b/src/app/pages/admin/admin-docente-components/admin-list-docente/admin-list-docente.component.css
@@ -1,7 +1,7 @@
 .container {
     
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(100px,100%), 1fr));
     gap: 5px;
 }
 .cuerpo{
