--- a/src/app/pages/admin/admin-docente/admin-docente.component.css
+++ b/src/app/pages/admin/admin-docente/admin-docente.component.css
@@ -12,6 +12,9 @@
   gap: 3rem;
   grid-auto-rows: 15rem;
   grid-template-columns: repeat(auto-fill, minmax(15rem,1fr));
+  width: 100%; /* Ensure the container takes the full width */
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
+
 }
 .item{
   background: #33415c;
@@ -39,6 +42,7 @@ mat-divider{
 .title h3 {
   font-weight: bolder;
   color: white;
+  text-align: center;
 }
 .icon fa-icon{
   color: white;
@@ -51,4 +55,20 @@ mat-divider{
 }
 .item:hover .icon fa-icon{
   color: rgb(0, 0, 0);
+}
+
+@media (max-width: 600px) {
+  .container {
+      grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+      gap: 0.3rem; /* Reduce gap for smaller screens */
+
+  }
+
+  .item {
+      scale: 0.6; /* Reduce margin for smaller screens */
+      transition: all 500ms ease-in-out;
+  }
+  .item .icon fa-icon{
+    font-size: 50px;
+  }
 }
