--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <header>
     <div class="container">
         <nav class="nav_checkbox">
-            <a href="#" class="logo">
+            <a routerLink="" class="logo">
                 <fa-icon [icon]="icon"></fa-icon>
                 <h2>LOGO</h2>
             </a>
@@ -12,17 +12,18 @@
                 <div class="burger"></div>
             </label>
             <ul class="content_nav">
-                <li><a routerLink="dashboard">HOME</a></li>
-                <li><a href="#">NOSOTROS</a></li>
+                <li><a routerLink="">HOME</a></li>
+                <li><a routerLink="">NOSOTROS</a></li>
                 <li class="develop"><a href="">CURSOS</a>
                     <ul class="submenu">
-                        <li><a href="#">ACTUALIZACION</a></li>
-                        <li><a href="#">ESPECIALIZACION</a></li>
+                        <li><a routerLink="actualizacion">ACTUALIZACION</a></li>
+                        <li><a routerLink="especializacion">ESPECIALIZACION</a></li>
                     </ul>
 
                 </li>
-                <li><a href="#">DIPLOMADOS</a></li>
-                <li><a href="#">SERVICIOS</a></li>
+                <li><a routerLink="diplomado">DIPLOMADOS</a></li>
+                <li><a routerLink="docentes">DOCENTES</a></li>
+                <li><a routerLink="">SERVICIOS</a></li>
                 @if (isLogin()) {
                     <li><a routerLink="" (click)="logout()">cerrar Sesion </a></li>
                 }
