mejora de componentes card, slider, paginacion, baaraa de busque e lista de cursos

--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,5 @@
 
-<mat-toolbar class="mat-elevation-z3" [class.class-touch]="collapsed()" >
+<mat-toolbar  [class.class-touch]="collapsed()" >
     <button (click)="collapsed.set(!collapsed())">
         @if (collapsed()) {
             <fa-icon [icon]=iconArrowRight></fa-icon>
