--- a/src/app/pages/public/public-layout/public-layout.component.html
+++ b/src/app/pages/public/public-layout/public-layout.component.html
@@ -1,7 +1,13 @@
+<nav>
+  <app-navbar></app-navbar>
 
+</nav>
      
     <main>
       <router-outlet></router-outlet>
       
     </main>
+    <footer>
+      <app-footer></app-footer>
+    </footer>
 
