--- a/src/app/shared/components/card-curso/card-curso.component.html
+++ b/src/app/shared/components/card-curso/card-curso.component.html
@@ -1,25 +1,25 @@
-@if (curso!=undefined) {
-<div class="container">
+@if (datos!=undefined) {
+<div class="container" >
     <div class="card">
         <div class="card-title">
-            <p>{{curso.modalidad}}</p>
-            <img [src]="curso.image" alt="">
+            <p>{{datos.curso.modalidad}}</p>
+            <img [src]="datos.curso.image" alt="">
         </div>
         <div class="card-cuerpo">
-            <div class="nombre">
-                <h2>{{curso.nombre}}</h2>
+            <div (click)="detalleCurso(datos.curso.id)" class="nombre">
+                <p>{{cortarTexto(datos.curso.nombre,50)}}</p>
             </div>
             <div class="review">
-                <p>{{curso.detalle}}</p>
+                <p>{{datos.curso.detalle}}</p>
 
             </div>
             <div class="card-avatar-fecha">
                 <div class="avatar">
-                    <app-avatar [perfiles]="docentes"></app-avatar>
+                    <app-avatar [perfiles]="datos.docentes"></app-avatar>
                 </div>
                 <div class="fecha">
                     <fa-icon [icon]=calendarIcon></fa-icon>
-                    <p>{{optenerFecha(curso.fechaInicio+'')}}</p>
+                    <p>{{optenerFecha(datos.curso.fechaInicio+'')}}</p>
                 </div>
 
             </div>
@@ -27,7 +27,7 @@
         </div>
         <div class="card-pie">
 
-            <button>Ver Detalles</button>
+            <button (click)="detalleCurso(datos.curso.id)">Ver Detalles</button>
         </div>
         
     </div>
