--- a/src/app/auth/auth/auth.component.css
+++ b/src/app/auth/auth/auth.component.css
@@ -4,8 +4,8 @@
     flex-direction: column;
     align-items: center;
     margin: 50px auto;
-    width: 500px;
-    height: 600px;
+    width: 100%;
+    height: 100%;
     
     
   }
