--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.css
@@ -1,3 +1,4 @@
+
 .content {
     min-height: auto;
     max-height: auto;
@@ -8,15 +9,16 @@
     justify-content: center;
 
 }
-
+mat-sidenav{
+    top: 35px;
+    position: fixed;
+}
 mat-toolbar {
-    position: absolute;
-    z-index: 3;
-    width: 35px;
+    position: fixed;
+    z-index: 10;
+    width: 100%;
     height: 35px;
-    left: 250px;
 
-    border-radius: 100%;
 
     display: flex;
     justify-content: center;
@@ -27,12 +29,12 @@ mat-toolbar {
 }
 
 .class-touch {
-    left: 64px;
     transition: all 500ms ease-in-out;
 }
 
 mat-sidenav-container {
-    min-height: auto;
+    top: 35px;
+    min-height: 600px;
 }
 
 mat-sidenav,
@@ -40,7 +42,11 @@ mat-sidenav-content {
     transition: all 500ms ease-in-out;
 
 }
-
+.content{
+    overflow-x: scroll;
+    scrollbar-width: none;
+    padding: 2rem;
+}
 mat-toolbar button {
     border-radius: 100%;
     color: rgb(8, 55, 156);
