--- a/src/app/pages/public/cursos-list/cursos-list.component.css
+++ b/src/app/pages/public/cursos-list/cursos-list.component.css
@@ -1,9 +1,12 @@
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(min(150px,100%), 1fr));
-    gap: 1rem;
+    align-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(min(300px,100%), 1fr));
+    gap: 1rem ;
     margin: 1rem;
+    place-items: center;
   }
+    
   
   .paginator {
     display: flex;
