--- a/src/app/pages/public/cursos-list/cursos-list.component.html
+++ b/src/app/pages/public/cursos-list/cursos-list.component.html
@@ -1,13 +1,14 @@
 <div class="curso-list">
-  @if (paginationRequest) {
-    <div>
-      <app-buscador class="paginator" (pageChange)="onNameSearch($event)"></app-buscador>
-    </div>
-  <div class="list-cuerpo grid-container" >
-    @for (item of datosCurso; track item.id) {
+  @if (paginationRequest&&response) {
+  <div>
+    <app-buscador class="paginator" (pageChange)="onNameSearch($event)"></app-buscador>
+  </div>
 
-    <app-card-curso [curso]="item"  class="curso-card"></app-card-curso>
-    
+  <div class="list-cuerpo grid-container">
+    @for (item of datosCurso; track $index) {
+
+    <app-card-curso [datos]="item" class="curso-card"></app-card-curso>
+
 
 
     }
