--- a/src/app/shared/components/card-curso/card-curso.component.css
+++ b/src/app/shared/components/card-curso/card-curso.component.css
@@ -1,7 +1,8 @@
 .container{
+    
     height: 100%;
-    width: 500px;
-    margin: 20px;
+    width: 300px;
+    margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,8 +23,8 @@
 }
 .card-title{
     top: 0;
-    height: 250px;
-    width: 500px;
+    height: 150px;
+    width: 300px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -32,31 +33,45 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     height: 100%;
-    width: 500px;
+    width: 300px;
 }
 .card-title p{
     position: absolute;
     text-align: center;
+    width: 65px;
     height: 20px;
     background: rgb(255, 255, 255);
     color: red;
     border: none;
     margin: 5px;
+    font-size: 9px;
+    font-weight: bold;
 
     border-radius: 10px;
 }
 .card-cuerpo{
     top: 0;
     height: 100%;
-    width: 500px;
+    width: 300px;
     flex-direction: column;
     justify-content: center;
     align-items: start;
 }
+.nombre:hover{
+    scale: 1.1;
+    font-weight: bolder;
+}
 .card-cuerpo .nombre{
-    width: 100%;
+    user-select: none;
+    cursor: pointer;
+    width: 300px;
+    height: 40px;
     text-align: center;
-    margin: 0;
+    margin-bottom: 2px;
+    padding: 2px;
+    font-size: 15px;
+    
+    font-weight: bold;
 
 }
 .review{
@@ -68,7 +83,7 @@
     margin: 0;
     border-radius: 10px;
     width: 100%;
-    height: 80px;
+    height: 70px;
     padding: 0 1rem;
     overflow-y: scroll;
     text-align: justify;
@@ -81,13 +96,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0.5rem 20px;
+    padding:5px 20px;
     align-items: center;
 }
 .fecha{
     display: flex;
     flex-direction: row;
-    gap: 1rem;
+    gap: 0.2rem;
 
 }
 .fecha fa-icon{
@@ -97,7 +112,7 @@
 .fecha p{
     text-align: center;
     color: rgb(0, 0, 0);
-    font-size: 20px;
+    font-size: 15px;
     background: rgba(255, 255, 255, 0.651);
     padding: 2px;
     border-radius: 5px;
@@ -113,16 +128,20 @@
     height: 40px;
     border-radius: 10px;
     color: rgb(2, 26, 70);
-    width: 100px;
+    width: 120px;
     border: none;
     font-size: 15px;
     font-weight: bold;
 
 }
-@media (max-width: 700px) {
+.card-pie button:hover{
+    background:rgb(2, 26, 70) ;
+    color: white;
+}
+@media (max-width: 640px) {
     .container{
 
-        width: 300px;
+        width: 400px;
         
         
     }
@@ -133,32 +152,70 @@
     }
     .card-title{
 
-        width: 300px;
+        width: 400px;
             }
     .card-title img{
     
-        width: 300px;
+        width: 400px;
     }
     
     .card-cuerpo{
 
-        width: 300px;
+        width: 400px;
 
     }
-    app-avatar{
-        scale: 50%;
+
+
+}
+@media (max-width: 450px) {
+    .container{
+
+        width: 210px;
+        
+        
     }
+    .card{
+
+        width: 100%;
+        
+    }
+    .card-title{
+
+        width: 210px;
+            }
+    .card-title img{
+    
+        width: 210px;
+    }
+    
+    .card-cuerpo{
+
+        width: 210px;
+
+    }
+  
     .fecha fa-icon{
         color: rgb(0, 8, 56);
-        font-size: 15px;
+        font-size: 10px;
     }
     .fecha p{
         text-align: center;
         color: rgb(0, 0, 0);
-        font-size: 15px;
+        font-size: 10px;
         background: rgba(255, 255, 255, 0.651);
         padding: 1px;
         border-radius: 5px;
     }
+    .card-cuerpo .nombre{
+        user-select: none;
+        cursor: pointer;
+        width: 210px;
+        text-align: center;
+        margin: 0;
+        padding: 1px;
+        font-size: 15px;
+        
+        font-weight: bold;
     
+    }
 }
