--- a/src/app/shared/components/pagination/pagination.component.css
+++ b/src/app/shared/components/pagination/pagination.component.css
@@ -37,3 +37,31 @@ span{
     font-weight: bold;
     color:  rgb(1, 42, 74);
 }
+@media (max-width: 800px) {
+    span{
+        font-weight: normal;
+        color:  rgb(1, 42, 74);
+        font-size: 10px;
+    }
+    .pagination button {
+        width: 60px;
+        height: 30px;
+        margin: 2px;
+        border-radius: 10px;
+        text-align: center;
+        font-size: 10px;
+    
+        transition: background-color 0.3s ease;
+    }
+    
+}
+@media (max-width: 400px) {
+    span{
+        font-weight: normal;
+        color:  rgb(1, 42, 74);
+        font-size: 10px;
+        width: 70px
+    }
+    
+}
+
