--- a/src/app/shared/components/avatar/avatar.component.html
+++ b/src/app/shared/components/avatar/avatar.component.html
@@ -4,11 +4,17 @@
         @for (item of dataAvatar; track item.id) {
         <div class="grup">
             @if(labelShow==item.id){
-                <p class="label" >{{item.name}}</p>
+            <p class="label">{{item.name}}</p>
             }
-            
-            <div class="imagen" (mouseenter)="entra(item.id)" (mouseleave)="sale()">
+
+            <div class="imagen" (mouseenter)="entra(item.id)" (mouseleave)="sale()" (click)="detalleDocente(item.id)">
+                @if (item.avatar.length>0) {
                 <img [src]="optenerUrlSegurp(item.avatar)" />
+                }@else {
+                    <div class="span">
+                        <span>{{(item.name[0]).toUpperCase()}}{{item.lastName[0]}}</span>
+                    </div>
+                }
             </div>
 
         </div>
