--- a/src/app/shared/components/sidebar/sidebar.component.css
+++ b/src/app/shared/components/sidebar/sidebar.component.css
@@ -14,6 +14,11 @@
     object-fit: cover;
     margin-bottom: 10px;
 }
+.sidenav-header span {
+    border-radius: 100%;
+    object-fit: cover;
+    margin-bottom: 10px;
+}
 
 .header-text {
     height: 3rem;
