--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.css
@@ -1,4 +1,3 @@
-
 .content {
     min-height: auto;
     max-height: auto;
@@ -9,21 +8,22 @@
     justify-content: center;
 
 }
-mat-sidenav{
-    top: 35px;
+
+mat-sidenav {
+    top: 45px;
     position: fixed;
 }
+
 mat-toolbar {
     position: fixed;
     z-index: 10;
     width: 100%;
-    height: 35px;
+    height: 45px;
 
 
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-
     transition: all 500ms ease-in-out;
 
 }
@@ -42,11 +42,13 @@ mat-sidenav-content {
     transition: all 500ms ease-in-out;
 
 }
-.content{
+
+.content {
     overflow-x: scroll;
     scrollbar-width: none;
     padding: 2rem;
 }
+
 mat-toolbar button {
     border-radius: 100%;
     color: rgb(8, 55, 156);
@@ -59,4 +61,20 @@ mat-toolbar button:hover {
     color: rgb(4, 22, 61);
 
     opacity: 1;
+}
+
+
+
+.info-user {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.info-user a {
+    font-size: smaller;
+    text-decoration: none;
 }
