--- a/src/app/pages/admin/admin-docente/admin-docente.component.css
+++ b/src/app/pages/admin/admin-docente/admin-docente.component.css
@@ -12,9 +12,8 @@
   gap: 3rem;
   grid-auto-rows: 15rem;
   grid-template-columns: repeat(auto-fill, minmax(15rem,1fr));
-  width: 100%; /* Ensure the container takes the full width */
-  box-sizing: border-box; /* Include padding and border in the element's total width and height */
-
+  width: 100%;
+  box-sizing: border-box; 
 }
 .item{
   background: #33415c;
