--- a/src/app/pages/public/curso/detalle-curso/detalle-curso.component.css
+++ b/src/app/pages/public/curso/detalle-curso/detalle-curso.component.css
@@ -1,46 +1,109 @@
-/* course-details.component.css */
-.course-details {
+.parent {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 8px;
+    margin: 5px;
+    
+    background-color: #fff;
     padding: 20px;
-    max-width: 800px;
-    margin: auto;
-  }
-  
-  .course-header {
-    text-align: center;
-  }
-  
-  .preview-video {
-    margin-top: 20px;
-  }
-  
-  .preview-video video {
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 1200px;
     width: 100%;
-    height: auto;
-  }
-  
-  .course-content {
-    margin-top: 20px;
-  }
-  
-  .course-content h3 {
-    margin-top: 20px;
-  }
-  
-  .course-cta {
-    margin-top: 20px;
-  }
-  
-  @media (max-width: 600px) {
-    .course-details {
-      padding: 10px;
     }
-  
-    .course-header h1 {
-      font-size: 24px;
+    .div1, .div2, .div3, .div4, .div5, .div6, .div7, .div8 {
+        background-color: #e0e0e0;
+        padding: 15px;
+        border-radius: 4px;
+        text-align: center;
+        font-size: 16px;
     }
-  
-    .course-content ul {
-      padding: 0;
-      list-style: none;
-    }
+    
+    .div1 { grid-area: 1 / 1 / 2 / 4; }
+    .div2 { grid-area: 2 / 1 / 3 / 2; }
+    .div3 { grid-area: 2 / 2 / 3 / 3; }
+    .div4 { grid-area: 2 / 3 / 3 / 4; }
+    .div5 { grid-area: 1 / 4 / 4 / 6; }
+    .div6 { grid-area: 3 / 1 / 4 / 2; }
+    .div7 { grid-area: 3 / 2 / 4 / 3; }
+    .div8 { grid-area: 3/3/4/4;}
+
+.curso{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin: 10px;
+}
+.options{
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+.options button{
+    border: none;
+    border-radius: 10px;
+    margin: 5px;
+    padding: 5px;
+}
+.content {
+    margin: 20px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
   }
+  
+  .sesion {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .descripcion {
+    flex: 1;
+    padding-right: 20px;
+  }
+  
+  .docente {
+    flex: 1;
+    padding-left: 20px;
+  }
+  
+  .fecha {
+    margin-top: 10px;
+  }
+  
+  .descripcion h3,
+  .docente h3 {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .descripcion p,
+  .docente p,
+  .fecha p {
+    margin-bottom: 10px;
+  }
+  
+  .docente p {
+    margin-bottom: 5px; /* Ajuste específico para los párrafos dentro de .docente */
+  }
+  
+  .fecha p {
+    font-style: italic;
+  }
+
+@media (max-width: 700px) {
+    .parent {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(5, auto);
+    }
+
+    .div1, .div2, .div3, .div4, .div5, .div6, .div7, .div8{
+        grid-area: auto / auto / auto / auto;
+    }
+    
+}
