--- a/src/app/pages/public/curso/detalle-curso/detalle-curso.component.html
+++ b/src/app/pages/public/curso/detalle-curso/detalle-curso.component.html
@@ -1,27 +1,88 @@
-<!-- datos-details.component.html -->
-<div class="datos-details">
-    <div class="datos-header">
-      <h1>{{ datosCurso?.nombre }}</h1>
-      <p>{{ datosCurso?.detalle }}</p>
-      <div class="preview-video">
-        <video controls>
-          <source [src]="" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+<div>
+
+  <section class="curso">
+    @if (datosCurso) {
+    <div class="parent">
+      <div class="div1">
+        <p>Nombre Curso</p>
+        <p>{{datosCurso.nombre}}</p>
+      </div>
+      <div class="div2">
+        <p>Tipo Curso</p>
+        <p>{{datosCurso.tipoCurso}} </p>
+      </div>
+      <div class="div3">
+        <p>Modalidad Curso</p>
+        <p>{{datosCurso.modalidad}}</p>
+      </div>
+      <div class="div4">
+        <p>Estado</p>
+        <p>{{datosCurso.activo}} </p>
+      </div>
+      <div class="div5">
+        <p>Detalle Curso</p>
+        <p>{{datosCurso.detalle}}</p>
+      </div>
+      <div class="div6">
+        <p>Fecha de Inicio</p>
+        <p>{{datosCurso.fechaInicio}} </p>
+      </div>
+      <div class="div7">
+        <p>Fecha Finalizacion</p>
+        <p>{{datosCurso.fechaFin}} </p>
+      </div>
+      <div class="div8">
+        <p>Precio</p>
+        <p><span matTextPrefix>S/&nbsp;</span>{{datosCurso.precio}} </p>
       </div>
     </div>
-    <!--<div class="datos-content" *ngIf="userStatus === 'purchased'">
-      <h2>datos Content</h2>
-      <div *ngFor="let session of datos.sessions">
-        <h3>{{ session.title }}</h3>
-        <ul>
-          <li *ngFor="let classItem of session.classes">{{ classItem.title }}</li>
-        </ul>
-      </div>
+    }
+
+  </section>
+  <section class="cont-curso">
+    <div class="modulo">
+      <h1 style="align-content: center;">modulos del curso</h1>
+      @for (modulo of datosModulo; track $index) {
+      <mat-expansion-panel (opened)="optenerSesiones(modulo.idModulo)" hideToggle>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            {{modulo.nombre}}
+          </mat-panel-title>
+          
+
+        </mat-expansion-panel-header>
+        <div>
+          <h1>clases del Modulo</h1>
+          @for (sesion of sesiones[modulo.idModulo]; track $index) {
+          <div class="content">
+            <div class="sesion">
+              <div class="descripcion">
+                <h3>detalle clase {{sesion.numOrden}}</h3>
+                <p>{{sesion.description}}</p>
+              </div>
+              <div class="docente">
+                <h3>docente</h3>
+                <p>nombre: {{sesion.docente.name}} {{sesion.docente.lastName}}</p>
+                <p>Especialidad: {{sesion.docente.especialidad}}</p>
+                <p>image: {{sesion.docente.avatar}}</p>
+              </div>
+              <div class="fecha">
+                <p>fecha : {{convertirFecha(sesion.inicioSession).fecha}}</p>
+                <p>Hora inicio: {{convertirFecha(sesion.inicioSession).hora}}</p>
+                <p>Hora finalizacion: {{convertirFecha(sesion.finalSession).hora}}</p>
+              </div>
+            </div>
+          </div>
+          }
+
+        </div>
+
+      </mat-expansion-panel>
+      }
+
+
     </div>
-    <div class="datos-cta" *ngIf="userStatus !== 'purchased'">
-      <p *ngIf="userStatus === 'registered'">Purchase this datos to get full access!</p>
-      <p *ngIf="userStatus === 'guest'">Register and purchase to get full access!</p>
-    </div>
-  </div>-->
-  
+  </section>
+  <section class="inf-adicional"></section>
+  <section class="docentes"></section>
+</div>
