--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,25 +1,20 @@
 <div class="barra-lateral">
     <div class="sidenav-header">
-        <img 
-        [width]="profilePicSize()"
-         [height]="profilePicSize()" 
-         src="/assets/perfil.jpg" [routerLink]="'perfil'">
+        @if (userPerfil!=null) {
+        <img [width]="profilePicSize()" [height]="profilePicSize()" [src]="userPerfil.avatar" [routerLink]="'perfil'">
         <div class="header-text" [class.hide-header-text]="sideNavCollased()">
-            <h2>Your Perfil</h2>
-            <p>joe doe</p>
-    
+            <h2>Tu Perfil</h2>
+            
+            <p>{{userPerfil.name}} {{userPerfil.lastName}}</p>
+           
+
         </div>
+    }
     </div>
     <mat-nav-list>
-        <a mat-list-item
-        class="menu-item"
-        *ngFor="let item of menuItems()"
-        [routerLink]="item.route"
-        routerLinkActive="select-menu-item"
-        #rla="routerLinkActive"
-        [activated]="rla.isActive"
-        >
-            <mat-icon  matListItemIcon>{{item.icon}} </mat-icon>
+        <a mat-list-item class="menu-item" *ngFor="let item of menuItems()" [routerLink]="item.route"
+            routerLinkActive="select-menu-item" #rla="routerLinkActive" [activated]="rla.isActive">
+            <mat-icon matListItemIcon>{{item.icon}} </mat-icon>
             <span matListItemTitle *ngIf="!sideNavCollased()">{{item.label}}</span>
         </a>
     </mat-nav-list>
