--- a/src/app/pages/admin/admin-docente-components/admin-list-docente/admin-list-docente.component.html
+++ b/src/app/pages/admin/admin-docente-components/admin-list-docente/admin-list-docente.component.html
@@ -1,13 +1,1 @@
-<div class="cuerpo">
-
-
-<div class="container">
-    @for (item of responseList; track $index) {
-
-        <app-card-perfil-docente [perfil]=item></app-card-perfil-docente>
-        <br>
-    }
-</div>
-
-    
-</div>
+<app-list-docente></app-list-docente>
