--- a/src/app/pages/admin/admin-sesion-components/view-sesion/view-sesion.component.css
+++ b/src/app/pages/admin/admin-sesion-components/view-sesion/view-sesion.component.css
@@ -20,12 +20,28 @@
         border-radius: 4px;
         text-align: center;
         font-size: 16px;
+
+    }
+    .div3{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
     }
     
     .div1 { grid-area: 1 / 1 / 3 / 3; }
     .div2 { grid-area: 3 / 1 / 4 / 2; }
     .div3 { grid-area: 1 / 3 / 3 / 4; }
     .div4 { grid-area: 3 / 2 / 4 / 4; }
+    .parent div h3{
+        font-weight: bold;
+    color: blue;
+    }
+    .parent div p {
+        font-style: italic;
+        color: green;
+    }
+    
     @media (max-width: 700px) {
         .parent {
             grid-template-columns: 1fr;
