--- a/src/app/pages/public/curso/detalle-curso/detalle-curso.component.css
+++ b/src/app/pages/public/curso/detalle-curso/detalle-curso.component.css
@@ -1,24 +1,40 @@
+.detalle-curso{
+  margin: 1rem;
+  padding: 5rem;
+}
 .parent {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    gap: 8px;
     margin: 5px;
-    
-    background-color: #fff;
+    background-color: #f5f5f5;
+    color: #333;
+    border: 1px solid #ddd;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 1200px;
     width: 100%;
     }
+    .parent {
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+      overflow: hidden; /* Para evitar que las sombras se solapen */
+  }
     .div1, .div2, .div3, .div4, .div5, .div6, .div7, .div8 {
         background-color: #e0e0e0;
-        padding: 15px;
+        padding: 5px;
         border-radius: 4px;
         text-align: center;
+        align-items: center;
+        justify-content: center;
         font-size: 16px;
+    color: #333;
     }
+    .div1, .div2, .div3, .div4, .div5, .div6, .div7, .div8 {
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      border-radius: 4px;
+  }
     
     .div1 { grid-area: 1 / 1 / 2 / 4; }
     .div2 { grid-area: 2 / 1 / 3 / 2; }
@@ -36,18 +52,26 @@
     justify-content: center;
     gap: 10px;
     margin: 10px;
+    font-family: 'Roboto', Arial, sans-serif;
+    line-height: 1.6;
+    letter-spacing: 0.5px;
+    padding: 20px;
 }
-.options{
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
+
+.curso {
+  max-width: 100%;
 }
-.options button{
-    border: none;
-    border-radius: 10px;
-    margin: 5px;
-    padding: 5px;
+.parent {
+  max-width: 100%;
 }
+.div1, .div2, .div3, .div4, .div5, .div6, .div7, .div8 {
+  transition: background-color 0.3s ease;
+}
+.div1:hover, .div2:hover, .div3:hover, .div4:hover, .div5:hover, .div6:hover, .div7:hover, .div8:hover {
+  background-color: #ccc;
+}
+
+
 .content {
     margin: 20px;
     padding: 10px;
@@ -61,14 +85,14 @@
     justify-content: space-between;
   }
   
-  .descripcion {
-    flex: 1;
-    padding-right: 20px;
-  }
   
-  .docente {
-    flex: 1;
-    padding-left: 20px;
+  
+  .docente, .descripcion {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
   }
   
   .fecha {
