--- a/src/app/shared/components/card-curso/card-curso.component.css
+++ b/src/app/shared/components/card-curso/card-curso.component.css
@@ -167,3 +167,55 @@
 
 
 }
+@media (max-width: 450px) {
+    .container{
+
+        width: 210px;
+
+
+    }
+    .card{
+
+        width: 100%;
+
+    }
+    .card-title{
+
+        width: 210px;
+            }
+    .card-title img{
+
+        width: 210px;
+    }
+
+    .card-cuerpo{
+
+        width: 210px;
+
+    }
+
+    .fecha fa-icon{
+        color: rgb(0, 8, 56);
+        font-size: 10px;
+    }
+    .fecha p{
+        text-align: center;
+        color: rgb(0, 0, 0);
+        font-size: 10px;
+        background: rgba(255, 255, 255, 0.651);
+        padding: 1px;
+        border-radius: 5px;
+    }
+    .card-cuerpo .nombre{
+        user-select: none;
+        cursor: pointer;
+        width: 210px;
+        text-align: center;
+        margin: 0;
+        padding: 1px;
+        font-size: 15px;
+
+        font-weight: bold;
+
+    }
+}
